@@ -2,7 +2,7 @@ language: perl6
 sudo: false
 perl6:
   - latest
-  - '2017.09'
+  - '2017.10'
 install:
   - rakudobrew build zef
   - zef --depsonly install .
