@@ -18,6 +18,7 @@
     "PDF::AcroForm" : "lib/PDF/AcroForm.pm",
     "PDF::Action" : "lib/PDF/Action.pm",
     "PDF::Action::GoTo" : "lib/PDF/Action/GoTo.pm",
+    "PDF::Action::URI"  : "lib/PDF/Action/URI.pm",
     "PDF::Annot" : "lib/PDF/Annot.pm",
     "PDF::Annot::Circle" : "lib/PDF/Annot/Circle.pm",
     "PDF::Annot::FileAttachment" : "lib/PDF/Annot/FileAttachment.pm",
