@@ -22,7 +22,7 @@ class PDF::Annot::Square
 
     has Hash $.BE is entry(:alias<border-effect>);              #| (Optional; PDF 1.5) A border effect dictionary describing an effect applied to the border described by the BS entry
 
-    has Numeric @.RD is entry(:len(4));  #| (Optional; PDF 1.5) A set of four numbers describing the numerical differences between two rectangles: the Rect entry of the annotation and the actual boundaries of the underlying square or circle. Such a difference can occur in situations where a border effect (described by BE) causes the size of the Rect to increase beyond that of the square or circle.
+    has Numeric @.RD is entry(:len(4), :alias<rectangle-differences>);  #| (Optional; PDF 1.5) A set of four numbers describing the numerical differences between two rectangles: the Rect entry of the annotation and the actual boundaries of the underlying square or circle. Such a difference can occur in situations where a border effect (described by BE) causes the size of the Rect to increase beyond that of the square or circle.
     #| The four numbers correspond to the differences in default user space between the left, top, right, and bottom coordinates of Rect and those of the square or circle, respectively. Each value must be greater than or equal to 0. The sum of the top and bottom differences must be less than the height of Rect, and the sum of the left and right differences must be less than the width of Rect.
 
 }
