@@ -18,7 +18,7 @@ class PDF::ColorSpace::CalRGB
    }
 
    has CalRGBDict $.dict is index(1);
- 
+
    method WhitePoint is rw { self.dict.WhitePoint }
    method BlackPoint is rw { self.dict.BlackPoint }
    method Gamma      is rw { self.dict.Gamma }
