@@ -6,28 +6,52 @@ use PDF::COS::Tie::Array;
 my subset NumNull where { .does(Numeric) || !.defined };  #| UInt value or null
 
 role PDF::Destination does PDF::COS::Tie::Array {
-    has $.page is index(0);
+    my enum Fit is export(:Fit) «
+        :FitXYZoom<XYZ>     :FitWindow<Fit>
+        :FitHoriz<FitH>     :FitVert<FitV>
+        :FitRect<FitR>      :FitBox<FitB>
+        :FitBoxHoriz<FitBH> :FitBoxVert<FitBV>
+        »;
+    use PDF::Page;
+    has PDF::Page $.page is index(0);
     has $.type is index(1);
     # See [PDF 1.7 TABLE 8.2 Destination syntax]
     multi sub is-destination($page, 'XYZ', NumNull $left,
-                             NumNull $top, NumNull $zoom)        { True }
-    multi sub is-destination($page, 'Fit')                       { True }
-    multi sub is-destination($page, 'FitH',  NumNull $top)       { True }
-    multi sub is-destination($page, 'FitV',  NumNull $left)      { True }
-    multi sub is-destination($page, 'FitR',  Numeric $left,
+                             NumNull $top, NumNull $zoom)     { True }
+    multi sub is-destination($page, 'Fit')                    { True }
+    multi sub is-destination($page, 'FitH', NumNull $top)     { True }
+    multi sub is-destination($page, 'FitV', NumNull $left)    { True }
+    multi sub is-destination($page, 'FitR', Numeric $left,
                              Numeric $bottom, Numeric $right,
-                             Numeric $top )                      { True }
-    multi sub is-destination($page, 'FitB')                      { True }
-    multi sub is-destination($page, 'FitBH', NumNull $top)       { True }
-    multi sub is-destination($page, 'FitBV', NumNull $left)      { True }
-    multi sub is-destination(|c)                      is default { False }
+                             Numeric $top )                   { True }
+    multi sub is-destination($page, 'FitB')                   { True }
+    multi sub is-destination($page, 'FitBH', NumNull $top)    { True }
+    multi sub is-destination($page, 'FitBV', NumNull $left)   { True }
+    multi sub is-destination(|c) is default                   { False }
 
-    my subset DestinationArray of Array where is-destination(|$_);
+    my subset DestinationArray of List is export(:DestinationArray) where is-destination(|$_);
 
     method delegate-destination(DestinationArray $_) {
         PDF::Destination[ .[1] ];
     }
 
+    method !dest(List $dest) { PDF::COS.coerce( PDF::COS.coerce($dest), $.delegate-destination($dest) ) }
+
+    #| constructs a new PDF::Destination array object
+    multi method construct(FitWindow,  PDF::Page :$page!, )                { self!dest: [$page, FitWindow, ] }
+    multi method construct(FitHoriz,   PDF::Page :$page!, Numeric :$top )  { self!dest: [$page, FitHoriz,    $top ] }
+    multi method construct(FitVert,    PDF::Page :$page!, Numeric :$left ) { self!dest: [$page, FitVert,     $left ] }
+    multi method construct(FitBox,     PDF::Page :$page!, )                { self!dest: [$page, FitBox,      ] }
+    multi method construct(FitBoxHoriz,PDF::Page :$page!, Numeric :$top )  { self!dest: [$page, FitBoxHoriz, $top] }
+    multi method construct(FitBoxVert, PDF::Page :$page!, Numeric :$left ) { self!dest: [$page, FitBoxVert,  $left] }
+
+    multi method construct(FitXYZoom,   PDF::Page :$page!, Numeric :$left,
+                           Numeric :$top, Numeric :$zoom )       { self!dest: [$page, FitXYZoom, $left, $top, $zoom ] }
+
+    multi method construct(FitRect,    PDF::Page :$page!,
+                           Numeric :$left!,   Numeric :$bottom!,
+                           Numeric :$right!,  Numeric :$top!, )  { self!dest: [$page, FitRect,     $left,
+                                                                               $bottom, $right, $top] }
 }
 
 role PDF::Destination['XYZ']
@@ -72,4 +96,5 @@ role PDF::Destination['FitBV']
     does PDF::Destination {
     has Numeric $.left is index(2);
 }
+
 
