@@ -7,7 +7,7 @@
             "ID": {
               "array": [
                 {
-                  "hex-string": "×C¨üÜø{iÃeH!©A"
+                  "hex-string": "òmßM\u001f¬\u0006t5z+\u0001?"
                 },
                 {
                   "hex-string": "0BD³C|N{:g\u0016l^C"
